deploy/network/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: ${CI_PROJECT_NAME}
